--- a/samplesite/bboard/templates/layout/basic.html
+++ b/samplesite/bboard/templates/layout/basic.html
@@ -1,8 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Главная{% endblock %} :: Доска Объявлений</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'bboard/style.css' %}">
 </head>
 <body>
     <header>
@@ -12,7 +14,7 @@
         <a href="{% url 'index' %}">Главная</a>
         <a href="{% url 'add' %}">Добавить</a>
         {% for rubric in rubrics %}
-        <a href="{% url 'by_rubric' rubric.pk %}/">{{ rubric.name }}</a>
+        <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
         {% endfor %}
     </nav>
     <section>
